Fixed mobile site issues: Added clickable logo, fixed viewport scaling, improved image cropping, centered content

--- a/mobile/M_styles.css
+++ b/mobile/M_styles.css
@@ -5,12 +5,24 @@
     box-sizing: border-box;
 }
 
+/* Body container */
+body {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background: white;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
 /* Base container for all pages */
 .m-home, .m-nfts, .m-focgs, .m-about, .m-contact, .m-menu {
     width: 440px;
-    height: 956px;
+    height: 100%;
     position: relative;
     background: white;
+    overflow: hidden;
 }
 
 /* Header bar */
@@ -24,8 +36,8 @@
     z-index: 2;
 }
 
-/* Logo */
-.logo {
+/* Logo - make it clickable */
+.logo-link {
     width: 51px;
     height: 54px;
     position: absolute;
@@ -33,11 +45,17 @@
     transform: translateX(-50%);
     top: 45px;
     z-index: 3;
+    cursor: pointer;
+}
+
+.logo {
+    width: 100%;
+    height: 100%;
 }
 
 /* Background images */
 .background {
-    width: 440px;
+    width: 100%;
     height: 812px;
     position: absolute;
     top: 144px;
@@ -93,14 +111,6 @@
     font-family: 'Inter', sans-serif;
     font-weight: 700;
     z-index: 2;
-}
-
-/* Body container */
-body {
-    width: 440px;
-    margin: 0 auto;
-    background: white;
-    overflow-x: hidden;
 }
 
 /* Position menu items as per Figma design */
